[gd_scene load_steps=5 format=3 uid="uid://cm05h8tarkp6"]

[ext_resource type="Theme" uid="uid://c3nu6i7da3wrw" path="res://main/user_interface/theme/Theme.tres" id="1_w4y16"]
[ext_resource type="Script" path="res://main/user_interface/menu/title_menu/TitleMenu.gd" id="2_p6527"]
[ext_resource type="Texture2D" uid="uid://wmeh4byb08wb" path="res://main/user_interface/icons/help.png" id="3_cyprv"]
[ext_resource type="Texture2D" uid="uid://basfood4o3g7y" path="res://main/user_interface/icons/settings.svg" id="4_j23t2"]

[node name="TitleMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_w4y16")
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 96
script = ExtResource("2_p6527")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HelpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
icon = ExtResource("3_cyprv")

[node name="InfoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
icon = ExtResource("3_cyprv")

[node name="SettingsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
icon = ExtResource("4_j23t2")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.172549, 0.156863, 0.223529, 0.313726)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 13
theme_override_font_sizes/font_size = 115
text = "NƒÅda"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.172549, 0.156863, 0.223529, 0.313726)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 13
text = "A singing bowl meditation app"
